SSCSCI-2566 Retire UC CM feature toggle